--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 dependencies {
 
     def retrofit_version = '2.9.0'
-    def nav_version = '2.3.5'
+    def nav_version = '2.3.5z'
     def coroutines_version = '1.5.0'
     def lifecycle_version = "2.3.1"
     def interceptor_version = '4.9.0'
@@ -95,7 +95,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Lottie Animation
-    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.airbnb.android:lottie:4.2.1'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
@@ -103,6 +103,8 @@ dependencies {
 
     //Paging3
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
