--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs.kotlin'
+    id 'androidx.navigation.safeargs'
     id 'kotlin-android-extensions'
 }
 
@@ -38,7 +38,7 @@ android {
         viewBinding true
     }
     ext.postBuildExtras = {
-        apply plugin: "androidx.navigation.safeargs.kotlin"
+        apply plugin: "androidx.navigation.safeargs"
     }
 
     bundle {
@@ -57,7 +57,8 @@ static def versionCodeDate() {
 dependencies {
 
     def retrofit_version = '2.9.0'
-    def nav_version = '2.3.5z'
+    def nav_version = '2.5.0-alpha02'
+    def fragment_version = '1.5.0-alpha02'
     def coroutines_version = '1.5.0'
     def lifecycle_version = "2.3.1"
     def interceptor_version = '4.9.0'
@@ -78,6 +79,9 @@ dependencies {
     //Navigation Component
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
@@ -135,8 +139,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
