--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,9 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    //CameraPermission
+    implementation 'io.github.ParkSangGwon:tedpermission-coroutine:3.3.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
