--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,9 @@ dependencies {
     //CameraPermission
     implementation 'io.github.ParkSangGwon:tedpermission-coroutine:3.3.0'
 
+    //ScalableSize
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
