--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,9 @@ dependencies {
     def nav_version = '2.5.0-alpha02'
     def fragment_version = '1.5.0-alpha02'
     def coroutines_version = '1.5.0'
-    def lifecycle_version = "2.3.1"
+    def lifecycle_version = "2.5.0-alpha05"
+    def arch_version = "2.1.0"
     def interceptor_version = '4.9.0'
-    def paging_version = "3.0.0"
     def koin_version = "2.2.0-rc-4"
 
     implementation "com.journeyapps:zxing-android-embedded:3.6.0"
@@ -70,7 +70,7 @@ dependencies {
 
     implementation 'ru.tinkoff.decoro:decoro:1.5.0'
 
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     //Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -92,19 +92,33 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     // LiveData
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     // Saved state module for ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
 
     // Annotation processor
-    kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     // alternately - if using Java8, use the following instead of lifecycle-compiler
-    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    // optional - helpers for implementing LifecycleOwner in a Service
+    implementation "androidx.lifecycle:lifecycle-service:$lifecycle_version"
+
+    // optional - ProcessLifecycleOwner provides a lifecycle for the whole application process
+    implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
+
+    // optional - ReactiveStreams support for LiveData
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+
+    // optional - Test helpers for LiveData
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
 
     //Interceptor
     implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
@@ -113,11 +127,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.bumptech.glide:compiler:4.12.0'
 
-    //Hilt
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //Lottie Animation
     implementation 'com.airbnb.android:lottie:4.2.1'
@@ -125,11 +135,6 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation 'androidx.biometric:biometric:1.1.0'
-
-    //Paging3
-    implementation "androidx.paging:paging-runtime:$paging_version"
-
-    implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
@@ -143,8 +148,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
