--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
     //Interceptor
     implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
 
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.bumptech.glide:compiler:4.12.0'
